<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practice Indian Classical Music</string>
    <string name="action_settings">Settings</string>

    <!-- menu -->
    <string name="plainThat">Plain-Thaat</string>
    <string name="patterns">Pattern-Thaat</string>
    <string name="song">Song</string>

    <!-- control panel -->
    <string name="tempo">Tempo[]</string>
    <string name="playing">Playing[---]</string>
    <string name="button_increase_tempo">Increase Tempo</string>
    <string name="button_decrease_tempo">Decrease Tempo</string>
    <string name="button_stop">Stop</string>

    <!-- home screen -->
    <string name="title_home">Hello, Great to see you here.</string>
    <string name="thaat_choose_msg">Click a thaat to play</string>
    <string name="play_patterns">Practice Patterns</string>
    
    <!-- pattern screen -->
    <string name="title_scrn_pattern">Practice with patterns now.</string>
    <string name="thaat_choose_msg1">Change thaat:  </string>
    <string name="pattern_choose_msg">Click a pattern to play</string>

    <!-- song screen -->
    <string name="title_scrn_song">Great, you can play bandish(songs) here!</string>
    <string name="song_choose_msg">Click a song to play</string>
</resources>