<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121527"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_row="1"
        android:text="@string/title_scrn_pattern"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_gravity="left"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="2"
        android:text="@string/pattern_choose_msg"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/thaat_choose_msg1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/thaatDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="0dp" />
    </LinearLayout>

    <GridView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:background="#A4C639"
        android:clickable="true"
        android:numColumns="auto_fit"
        android:overScrollMode="always"
        android:scrollbarDefaultDelayBeforeFade="3000" />

    <include
        android:layout_marginTop="8dp"
        android:layout_row="5"
        layout="@layout/control_panel" />

</GridLayout>